---
source: src/reg_compiler/tests.rs
expression: bytecode
---
0 ; script
1 [   1]  Push           L21:  
2 [   1]  LoadImediate   r10[fn([nil], 0)] (local *3)  
3 ; imediate killed 11 for global *0
4 [   1]  MemCpy         (global *0)  r10[fn([nil], 0)] (1u)  
5 [   1]  Pop            
6 ; imediate killed 12 for global *0
7 [   0]  Move           r13[&fn([nil], 0)] (global *0)  
8 [   0]  Move           r14[fn([nil], 0)] r13[&fn([nil], 0)] 
9 [   0]  PreCall        r15[nil] r14[fn([nil], 0)] (0u)  
10 [   0]  Call           
11 [   0]  Halt           
12 ; anon0
13 [   1]  LoadImediate   r1[i64] (local *3)  
14 [   1]  Move           r2[&i64] r1[i64] 
15 [   1]  Load           r3[i64] r2[&i64] 
16 [   1]  LoadImediate   r4[i64] (local *4)  
17 [   1]  Move           r5[&i64] r4[i64] 
18 [   1]  Load           r6[i64] r5[&i64] 
19 [   1]  AddInt         r7[i64] r3[i64] r6[i64] 
20 [   1]  Return         r7[i64] (0u)  
21 ; main
22 [   1]  Push           L12:  
23 [   1]  LoadImediate   r8[fn([i64, i64, i64], 0)] (local *3)  
24 [   1]  Push           r0[nil] 
25 [   1]  LoadImediate   r9[*fn([i64, i64, i64], 0)] (local *3)  
26 [   1]  MemCpy         r9[*fn([i64, i64, i64], 0)] r8[fn([i64, i64, i64], 0)] (1u)  
27 [   1]  Return         r0[nil] (0u)
